--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
     "tailwindcss": "^3.2.7"
   }
 }
