--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
+    "@types/node": "18.11.3",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.7"
