--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "autoprefixer": "^10.4.12",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.7"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
